# corelib

./: .gitignore  README.md  SPEC.md  pyproject.toml
corelib/: __init__.py  auth.py  dependencies.py  factory.py  middleware.py  registry.py  schemas.py
tests/: conftest.py  test_dependencies.py  test_middleware.py  test_registry.py  test_schemas.py
